# chart-api

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: IMPLEMENTATION.md  PROJECT.md
.github/workflows/: ci.yml
app/: main.py
app/api/routes/: notes.py  patients.py  summary.py
app/core/: config.py  db.py  dependencies.py
app/db/: models.py
app/middleware/: logging.py
app/repositories/: note.py  patient.py
app/schemas/: note.py  patient.py  summary.py
app/services/: llm.py  note.py  patient.py
app/use_cases/: note.py  patient.py  summary.py
migrations/: env.py
migrations/versions/: 03ad0e469028_create_patients_table.py  821a34d383ae_create_notes_table.py
scripts/: seed.py
scripts/soap_notes/: soap_01.txt  soap_02.txt  soap_03.txt  soap_04.txt  soap_05.txt  soap_06.txt
tests/: conftest.py  test_notes.py  test_patients.py  test_summary.py
